--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
 
                     <div class="menu">
 
-                        <div class="burger-menu">
+                        <!-- Mobile -->
+                        <div class="burger-menu d-md-none">
                             <i class="fas fa-hamburger"></i>
                         </div>
 
-                        <ul class="list-menu">
+                        <!-- Desktop -->
+                        <ul class="list-menu d-none d-md-block">
                             <li>PORTFOLIO</li>
                             <li>ABOUT</li>
                             <li>CONTACT</li>
