--- a/index.html
+++ b/index.html
@@ -44,11 +44,23 @@
                 </div>
             </div>
 
-
-
-
         </div>
     </header>
+
+
+
+
+    <section class="jumbotron">
+
+        <div class="jumbo-img">
+            <img src="img/avatar.svg" alt="Avatar">
+        </div>
+
+        <h1>START BOOTSTRAP</h1>
+        <div>Lorem</div>
+        <span>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</span>
+
+    </section>
     
 </body>
 </html>
