--- a/index.html
+++ b/index.html
@@ -61,6 +61,45 @@
         <span>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</span>
 
     </section>
+
+
+    <section class="portfolio">
+        <div class="container">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
+
+                <div class="col">
+                    <div class="portfolio-item">
+                        <img src="img/cabin.png" alt="">
+                    </div>            
+                </div>
+                <div class="col">
+                    <div class="portfolio-item">
+                        <img src="img/cake.png" alt="">
+                    </div>            
+                </div>
+                <div class="col">
+                    <div class="portfolio-item">
+                        <img src="img/circus.png" alt="">
+                    </div>            
+                </div>
+                <div class="col">
+                    <div class="portfolio-item">
+                        <img src="img/game.png" alt="">
+                    </div>            
+                </div>
+                <div class="col">
+                    <div class="portfolio-item">
+                        <img src="img/safe.png" alt="">
+                    </div>            
+                </div>
+                <div class="col">
+                    <div class="portfolio-item">
+                        <img src="img/submarine.png" alt="">
+                    </div>            
+                </div>             
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
